--- a/public/index.html
+++ b/public/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="Mealapp is a frontend website that displays a food's content, including foods category, foods country area, ingredients, and cooking steps with a video">
+    <meta name="robots" content="noindex nofollow">
+    <link rel="canonical" href="https://meal.rifqiiardhian.com">
+    <title>The MealApp Created by Rifqiiardhian</title>
+    <link rel="shortcut icon" href="<%= BASE_URL %>favicon.ico" type="ico">
+    <meta property="og:title" content="The MealApp Created by Rifqiiardhian" />
+    <meta property="og:description" content="Mealapp is a frontend website that displays a food's content, including foods category, foods country area, ingredients, and cooking steps with a video" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://meal.rifqiiardhian.com" />
+    <meta property="og:image" content="https://meal.rifqiiardhian.com/img/icons/android-chrome-512x512.png" />
+    <meta property="og:image:width" content="300" />
+    <meta property="og:image:height" content="300" />
   </head>
   <body>
     <noscript>
